# revpi-tools

./: .gitignore  .gitlab-ci.yml  50-revpi.rules  CMakeLists.txt  Kyuafile  README  README.md  enable_relay_watchdog.py  patch_eeprom.c  pibridge-shutdown  pibridge-shutdown.8  pileft.service  revpi-sos.1  revpi-tools_2.0.0.orig.tar.gz.delta  revpi-tools_2.0.0.orig.tar.gz.id  revpi-tools_2.0.1.orig.tar.gz.delta  revpi-tools_2.0.1.orig.tar.gz.id  revpi-tools_2.0.2.orig.tar.gz.delta  revpi-tools_2.0.2.orig.tar.gz.id  revpi-tools_3.0.0.orig.tar.gz.delta  revpi-tools_3.0.0.orig.tar.gz.id  revpi-tools_3.0.1.orig.tar.gz.delta  revpi-tools_3.0.1.orig.tar.gz.id  revpi-tools_3.1.0.orig.tar.gz.delta  revpi-tools_3.1.0.orig.tar.gz.id  revpi-tools_3.1.1.orig.tar.gz.delta  revpi-tools_3.1.1.orig.tar.gz.id  revpi-tools_3.1.2.orig.tar.gz.delta  revpi-tools_3.1.2.orig.tar.gz.id  revpi-tools_3.1.3.orig.tar.gz.delta  revpi-tools_3.1.3.orig.tar.gz.id  revpi-tools_3.2.0.orig.tar.gz.delta  revpi-tools_3.2.0.orig.tar.gz.id  revpi-tools_3.3.0.orig.tar.gz.delta  revpi-tools_3.3.0.orig.tar.gz.id  revpi-tools_3.3.1.orig.tar.gz.delta  revpi-tools_3.3.1.orig.tar.gz.id  revpi-tools_3.3.2.orig.tar.gz.delta  revpi-tools_3.3.2.orig.tar.gz.id  revpi-tools_3.4.0.orig.tar.gz.delta  (+29 more)
.reuse/: dep5
LICENSES/: BSD-2-Clause.txt  MIT.txt
avahi-service/: CMakeLists.txt  revpi.service
avahi-services/: CMakeLists.txt  revpi-ssh.service
debian/: changelog  control  copyright  gbp.conf  gitlab-ci.yml  revpi-tools.install  revpi-tools.manpages  rules  watch
examples-watchdog/: CMakeLists.txt  README  disable_relay_watchdog.py  enable_relay_watchdog.py  patch_eeprom.c  revpi-connect-watchdog.sh
firstboot/: CMakeLists.txt  create-ssh-host-keys.sh  firstboot.service  regenerate-ssh-host-keys.service  resize-fs.sh
fixup/: CMakeLists.txt  revpi_buster_fix_pictory.sh  revpi_buster_fixup_pkgs.py  revpi_buster_upgrade_fix_nodered.sh
revpi-config/: CMakeLists.txt  revpi-config  revpi-config.1  revpi-config.1.scd
revpi-factory-reset/: CMakeLists.txt  revpi-factory-reset  revpi-factory-reset.8  revpi-factory-reset.8.scd  revpi-factory-reset.in  revpi-factory-reset.sh  revpi-factory-reset.sh.in  revpi-functions
revpi-sos/: CMakeLists.txt  revpi-sos  revpi-sos.1  revpi.py
systemd/: CMakeLists.txt  hdmi-disable.service  pileft-quirks.service  piright-quirks.service
tests/: CMakeLists.txt  Kyuafile  factory_reset_test  resize_fs_test  test_env.sh
tools/: CMakeLists.txt  ks8851-set-mac  ks8851-set-mac.8  ks8851-set-mac.8.scd  lan743x-set-mac  lan743x-set-mac.8.scd  lan743x.hex  lan743x.hex.license  lan7800.hex  lan7800.hex.license  lan78xx-set-mac  lan78xx-set-mac.8.scd  lan9514.hex.license  lan95xx-set-mac  lan95xx-set-mac.8.scd  pibridge-shutdown  pibridge-shutdown.8  pibridge-shutdown.8.scd  pibridge.conf  revpi-set-mac  revpi-set-mac.8.scd  revpi-set-mac.in  set-mac-functions
udev/: 50-revpi.rules  CMakeLists.txt  revpi_mac
